# sesc-echang

./: ProjectHome.md  sesc-notes.txt  simulation-notes.txt  timing-statistics.eml
src/: CMakeLists.txt  Makefile.defs  make.out  sescConfig.h  winSesc.sln  winSesc.vcproj  winSesc.vcxproj  winSesc.vcxproj.filters
src/MemSys/: CMakeLists.txt  Connection.cpp  Debug.h  EventManager.cpp  EventManager.h  HashContainers.h  MSTypes.h  MemorySystem.cpp  MemorySystem.h  StoredFunctionCall.h
src/MemSys/Devices/: AllDeviceTypes.h  BIPDirectory.cpp  BIPDirectory.h  BaseMemDevice.cpp  BaseMemDevice.h  CMakeLists.txt  Directory.cpp  Directory.cpp.oldrev  Directory.h  MESICache.cpp  MESICache.h  MOESICache.cpp  MOESICache.h  MSICache.cpp  MSICache.h  NetworkMemoryInterface.cpp  NetworkMemoryInterface.h  OriginDirectory.cpp  OriginDirectory.h  RandomLoadNetwork.cpp  RandomLoadNetwork.h  SESCProcessorInterface.cpp  SESCProcessorInterface.h  SnoopyBus.cpp  SnoopyBus.h  TestMemory.cpp  TestMemory.h  ThreeStageDirectory.cpp  ThreeStageDirectory.h
src/MemSys/Messages/: AllMessageTypes.h  BaseDeviceMsg.h  BaseMsg.h  BaseNakMsg.h  CacheNakMsg.h  DirectoryNakMsg.h  EvictionMsg.h  EvictionResponseMsg.h  InterventionMsg.h  InterventionSharedRequestMsg.h  InvalidateAckMsg.h  InvalidateMsg.h  InvalidateResponseMsg.h  MemAccessCompleteMsg.h  NetworkMsg.h  ReadCompleteMsg.h  ReadMsg.h  ReadReplyMsg.h  ReadResponseMsg.h  SpeculativeReadResponseMsg.h  SpeculativeReplyMsg.h  TransferMsg.h  UnrequestedReadResponseMsg.h  WriteMsg.h  WriteResponseMsg.h  WritebackAckMsg.h  WritebackMsg.h
src/WorkingFolder/: MakeCheckpoint.txt  RunFile.txt  RunFileSimple.sh  Simple1.memory  Simple2.memory  augSesc-release  base.conf  generate-runfile-all-from-template.sh  generate-runfiles.sh  msg-id-count.sh  produce-final-results.py  runfile-barnes-002-0001-0002.sh  runfile-barnes-all.sh  runfile-cholesky-002-0001-0002.sh  runfile-cholesky-all.sh  runfile-cholesky-lshp-002-0001-0002.sh  runfile-cholesky-lshp-3sd-moesi-002-0001-0002.sh  runfile-cholesky-lshp-3sd-moesi-004-0001-0002.sh  runfile-cray.sh  runfile-dorado.sh  runfile-fft-004-0001-0002.sh  runfile-fft-02cpu.sh  runfile-fft-032-0001-0002.sh  runfile-fft-064-0001-0002.sh  runfile-fft-3sd-moesi-002-0001-0002.sh  runfile-fft-all.sh  runfile-fft-snoopy-moesi-064-0016-1024.sh  runfile-fmm-256-002-0001-0002.sh  runfile-fmm-all.sh  runfile-genome-02cpu.sh  runfile-illiac1.sh  runfile-illiac2.sh  runfile-lion.sh  runfile-lu-002-0001-0002.sh  runfile-lu-all.sh  runfile-mpi.sh  runfile-radiosity-all.sh  runfile-radix-all.sh  runfile-raytrace-all.sh  runfile-vacation-high-02cpu.sh  (+7 more)
src/WorkingFolder/benchmarks/: genome  ssca2
src/WorkingFolder/benchmarks-sesc-spec/: apsi.mips  crafty.mips  radiosity.mips  raytrace.mips  vortex.mips
src/WorkingFolder/benchmarks-sesc-stamp/: intruder  kmeans  labyrinth
src/WorkingFolder/benchmarks-splash2-sesc/: fft.mips  newtest.mips  readtest.mips  writetest.mips
src/WorkingFolder/benchmarks-splash2-uncompiled/: ._SPLASH2.POSTING  ._codes  ._splash2_isca95.ps.Z
src/WorkingFolder/checkpoints/: chk_genome_2.checkpoint  chk_vacation_low_02cpu.checkpoint  chk_vacation_low_2.checkpoint  chk_yada_02cpu.checkpoint  yada-dots-02cpu.checkpoint
src/WorkingFolder/console-outputs/: barnes-002-0001-0002-00.out.mpi  cholesky-002-0001-0002-00.out.mpi  cholesky-002-0001-0002-01.out.mpi  cholesky-002-0001-0002-02.out.mpi  cholesky-002-0001-0002-03.out.mpi  cholesky-002-0001-0002-04.out.mpi  cholesky-002-0001-0002-05.out.mpi  cholesky-002-0001-0002-07.out.mpi  cholesky-002-0001-0002-08.out.mpi  cholesky-002-0001-0002-09.out.mpi  cholesky-002-0001-0002-10.out.mpi  cholesky-002-0001-0002-12.out.mpi  cholesky-002-0001-0002-13.out.mpi  cholesky-3sd-moesi-002-0001-0002-00.out.mpi  cholesky-3sd-moesi-002-0001-0002-06.out.mpi  cholesky-3sd-moesi-002-0001-0002-08.out.mpi  copy-outfile.sh  fft-002-0001-0002-00.out.mpi  fft-002-0001-0002-05.out.mpi  fft-002-0001-0002-08.out.mpi  fft-002-0001-0002-09.out.mpi  fft-002-0001-0002-14.out.mpi  fft-004-0001-0002-01.out.mpi  fft-004-0001-0002-03.out.mpi  fft-004-0001-0002-05.out.mpi  fft-004-0001-0002-06.out.mpi  fft-004-0001-0002-09.out.mpi  fft-004-0001-0002-12.out.mpi  fft-008-0001-0002-00.out.mpi  fft-008-0001-0002-01.out.mpi  (+104 more)
src/include/: hash_fun_extra.h
src/libapp/: build_all_files.sh  combinedtest.c  combinedtest.sesc  compile-sesc.sh  hello.c  mem-test.c  memtest-real-c.c  memtest.c  memtest.sesc  newtest.c  readinctest.c  readtest.c  readtest.sesc  sescapi.h  smalltest.c  smalltest.sesc  writetest.c  writetest.sesc
src/libcore/: AdvancedStats.h  BPred.h  CMakeLists.txt  Cluster.h  FetchEngine.cpp  GMemorySystem.cpp  LDSTBuffer.cpp  OSSim.cpp  OSSim.h  ProcessId.cpp  Processor.cpp  RunningProcs.cpp  RunningProcs.h
src/libll/: CMakeLists.txt  ExecutionFlow.cpp  QemuSescReader.cpp  ThreadContext.cpp  ThreadContext.h  TraceFlow.h
src/libmem/: AlwaysPrefetch.cpp  CMakeLists.txt  MarkovPrefetcher.cpp  MemoryOS.cpp  MemorySystem.h  StridePrefetcher.cpp  mtst1.cpp
src/libmint/: CMakeLists.txt  coff.h  elf.cpp  elf.h  exec.cpp  icode.h  mendian.cpp  mendian.h  mint_init.cpp  opcodes.cpp  subst.cpp  symtab.cpp
src/libnet/: Router.cpp
src/libpint/: CMakeLists.txt
src/librst/: Rstzip.h  header.h  rz3_bitarray.h
src/libsmp/: SMPCache.cpp
src/libsuc/: CMakeLists.txt  CacheCore.h  Config.cpp  Config.h  GEnergy.h  GStats.cpp  MSHR.cpp  MSHR.h  Makefile  Port.h  ReportTherm.cpp  conflexlex.cpp  estl.h  nanassert.cpp
src/libsuperlu/: CMakeLists.txt  superlu_timer.c
src/libtrans/: CMakeLists.txt  CollisionDetectionExcludeAllBut.cpp  CollisionDetectionExcludeAllBut.h  CollisionDetectionFlatten.h  ITMCollisionDetection.h  LogTMCollisionDetection.cpp  LogTMSECollisionDetection.cpp  LogTMSECollisionDetection.h  PerfectCollisionManager.cpp  PerfectCollisionManager.h  PerfectVersioning.cpp  TMInterface.cpp  TMInterface.h  TMOpCodes.h  TMProcessor.cpp
src/libvmem/: FMVCache.h  LVIDTable.h  VMemReq.h  VMemState.h
trunk/src/: CMakeLists.txt  WinSesc.make  winSesc.sln  winSesc.vcxproj  winSesc.vcxproj.filters
(+29598 files in other folders)
