add_library (core
   AdvancedStats.cpp
   BPred.cpp
   Cluster.cpp
   DepWindow.cpp
   DInst.cpp
   FetchEngine.cpp
   GMemoryOS.cpp
   GMemorySystem.cpp
   GProcessor.cpp
   LDSTBuffer.cpp
   LDSTQ.cpp
   MemObj.cpp
   MemRequest.cpp
   OSSim.cpp
   Pipeline.cpp
   ProcessId.cpp
   Processor.cpp
   Resource.cpp
   RiskLoadProf.cpp
   RunningProcs.cpp
   SMTProcessor.cpp
   ValueTable.cpp
   VPred.cpp
)
